[package]
name = "url_shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
redis = "0.8.0"
base62 = "2.0.2"
rand = "0.8.5"
md-5 = "0.10.5"
futures = "0.3.25"
futures-util = "0.3.24"
mongodb = "2.1.0"
iplocate = "0.1.0"